# controlify-app

./: .gitignore  README.md  app.py  controlify.spec  main.py  mouse.py  pyproject.toml  req.txt  requirements.txt  socket.py
.github/workflows/: ci.yml  release.yml
Runnables/: MouseLeftClick.py  MouseRightClick.py  MoveMouseCursor.py  SendMouseLeftClick.py  SendMouseLeftClick.py.301e4427fa39f2069aa9067be9f20cf8.tmp  SendMouseRightClick.py  SendPointerPosition.py
Screens/: Confirm.py  Control.py  Filetransfer.py  Loading.py  Main.py  Notify.py  theme.py
Threads/: FileListenerThread.py  FileSenderThread.py  MouseLeftClick.py  MouseRightClick.py  MoveMouseCursor.py  SendMouseLeftClick.py  SendMouseRightClick.py  SendPointerPosition.py
Utils/: network.py  paths.py  redisconn.py  workers.py
Workers/: FrameReceiver.py  FrameSender.py  LogListener.py  MouseLeftClick.py  MousePosListener.py  MouseRightClick.py  MoveMouseCursor.py  SendMouseLeftClick.py  SendMouseRightClick.py  SendPointerPosition.py
tests/: test_network.py
