[project]
name = "controlify"
version = "1.2.0"
description = "Serverless P2P remote screen sharing and control application (PySide6/Qt6)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mss==10.2.0",
    "pynput==1.8.2",
    "pyside6-essentials==6.11.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.21.0",
    "pyright==1.1.411",
    "ruff==0.15.22",
]

[tool.pyright]
include = ["app.py", "Screens", "Threads", "Utils", "Workers", "tests"]

[tool.ruff.lint]
# I = import siralamasi (isort)
extend-select = ["I"]
